2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_duplicateclip(fla, swf): includes the using of
	duplicateMovieClip() function & duplicateMovieClip() method
	* gameswf/gameswf_impl(cpp, h): fixed sprite_duplicate_movieclip(), 
	clone_display_object() is used for duplicateMovieClip() function & 
	duplicateMovieClip() method
	* gameswf/gameswf_action.cpp: fixed 0x24(duplicate) opcode,
	added 0x43 opcode(decl object) is needed for duplicateclip
	* gameswf/gameswf_classes/as_db.cpp: added [#define ulong Uint32]

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_swapdepths(fla, swf): swapDepths() tester
	* gameswf/samples/test_duplicateclip(fla, swf): duplicateMovieClip() tester
	* gameswf/gameswf_impl(cpp, h),
	* gameswf/gameswf_dlist(cpp, h): added swapDepths & duplicateMovieClip stuff,
	duplicateMovieClip has a bug, later will be fixed

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_delete(fla, swf): added delete tester
	* gameswf/gameswf_classes/as_array(cpp,h): added to_string()
	for trace() & updated length property
	* gameswf/gameswf_action.cpp: The next attempt to fix the delete & delete2
	

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_mysql.fla: compacted

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_mysql(fla, swf): added mysql test
	* gameswf/gameswf_classes/as_db(cpp,h), as_table(h, cpp):
	added very simple, working and convenient MYSQL extension
	for the gameswf SWF player library.
	* gameswf/win32/VC8: added as_db(cpp,h) & as_table(h, cpp) files
	* gameswf/gameswf_action.cpp: The attempt to fix delete & delete2,
	added the call to mysql ctor
	* gameswf/gameswf_impl.cpp: simplified notify_keypress_listener(),
	Thanks Thatcher

2007-02-18  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: There is begun process of allocation
	of action script classes in own files, fixed as_array